Make sure the top-level expand/collapse button stays put when clicked
Previously, it would jump to the left of the search box when all folders
were collapsed.  Fix this by making sure we're positioning the "expand"
button correctly, too.

--- a/styles/page.less
+++ b/styles/page.less
@@ -41,7 +41,8 @@ header.page {
     grid-row: 1;
     grid-column: 3;
   }
-  & > .action.collapse {
+  & > .action.collapse,
+  & > .action.expand {
     grid-row: 1;
     grid-column: 4;
   }
